kubernetes/auth_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - name: auth
        image: deeaxfun2/auth:latest
        ports:
        - containerPort: 8001
        readinessProbe:
          httpGet:
            path: /api/v1/health
            port: 8001  # Changed from 80 to 8001
          initialDelaySeconds: 5
          periodSeconds: 5
