kubernetes/gateway_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      imagePullSecrets:
      - name: ocir-secret
      containers:
      - name: gateway
        image: eu-stockholm-1.ocir.io/axyklytnjcih/recipe-repo/gateway:latest
        ports:
        - containerPort: 8000
