kubernetes/ingredient_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingredient-deployment
  labels:
    app: ingredient
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingredient
  template:
    metadata:
      labels:
        app: ingredient
    spec:
      containers:
      - name: ingredient
        image: deeaxfun2/ingredient:latest
        ports:
        - containerPort: 8002
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
