kubernetes/meal_plan_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealplan-deployment
  labels:
    app: mealplan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealplan
  template:
    metadata:
      labels:
        app: mealplan
    spec:
      containers:
      - name: mealplan
        image: deeaxfun2/meal_plan:latest
        ports:
        - containerPort: 8003
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
