kubernetes/notification_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-deployment
  labels:
    app: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      imagePullSecrets:
      - name: ocir-secret
      containers:
      - name: notification
        image: eu-stockholm-1.ocir.io/axyklytnjcih/recipe-repo/notification:latest
        ports:
        - containerPort: 8004
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
