kubernetes/rating_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rating-deployment
  labels:
    app: rating
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rating
  template:
    metadata:
      labels:
        app: rating
    spec:
      containers:
      - name: rating
        image: deeaxfun2/rating:latest
        ports:
        - containerPort: 8005
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
