kubernetes/recipe_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-deployment
  labels:
    app: recipe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipe
  template:
    metadata:
      labels:
        app: recipe
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - name: recipe
        image: deeaxfun2/recipe:latest
        ports:
        - containerPort: 8006
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
