kubernetes/auth_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8001"
spec:
  selector:
    app: auth
  ports:
  - protocol: TCP
    port: 80  # External service port
    targetPort: 8001  # Container port
  type: ClusterIP
