kubernetes/ingredient_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingredient-service
spec:
  selector:
    app: ingredient
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8002
  type: NodePort
