kubernetes/meal_plan_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealplan-service
spec:
  selector:
    app: mealplan
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8003
  type: ClusterIP
