kubernetes/notification_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8004
  type: ClusterIP
