kubernetes/rating_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rating-service
spec:
  selector:
    app: rating
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8005
  type: ClusterIP
