kubernetes/recipe_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipe-service
spec:
  selector:
    app: recipe
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8006
  type: ClusterIP
