kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: recipe.com
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
      - path: /recipe
        pathType: Prefix
        backend:
          service:
            name: recipe-service
            port:
              number: 80
      - path: /ingredient
        pathType: Prefix
        backend:
          service:
            name: ingredient-service
            port:
              number: 80
      - path: /meal-plan
        pathType: Prefix
        backend:
          service:
            name: meal-plan-service
            port:
              number: 80
      - path: /rating
        pathType: Prefix
        backend:
          service:
            name: rating-service
            port:
              number: 80
